# AssettoCorsaCameraEditor

./: CMakeLists.txt  README.md  main.cpp  util.h
CameraEditor/: gcp_bmwm3gtre46.toml  gcp_camaro.toml  gcp_trafpizza.toml
